--- a/css/styles.css
+++ b/css/styles.css
@@ -39,6 +39,7 @@
   margin-bottom: 20px;
   border: 2px solid grey;
   border-style: dashed;
+  border-style: dashed;
 }
 
 .donation-guide--highlighting {
