--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,6 @@
   list-style-type: none;
   padding: 0;
   border-radius: 3px;
-  margin-bottom: 50px;
 }
 
 .form-row {
@@ -62,6 +61,18 @@ button {
   border: none;
   cursor: pointer;
   border-radius: 3px;
+}
+
+.donation-inputs__result {
+  background-color: whitesmoke;
+  max-width: 1400px;
+  margin: 0 auto;
+  list-style-type: none;
+  padding: 0;
+  border-radius: 3px;
+  margin-bottom: 50px;
+  display: flex;
+  flex-direction: column;
 }
 
 .form-row > input,
